force-app/main/default/objects/CVRD_DS_Proceeding_OutcomeMapping__mdt/CVRD_DS_Proceeding_OutcomeMapping__mdt.object-meta.xml
<CustomObject>
    <label>Proceeding OutcomeMapping</label>
    <pluralLabel>Proceeding OutcomeMappings</pluralLabel>
</CustomObject>