force-app/main/default/objects/CVRD_DS_Proceeding_OutcomeMapping__mdt/fields/CVRD_DS_ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_ApplicationType__c</fullName>
    <label>ApplicationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCP_Zoning_or_Land_Use_Bylaw_Amendment</fullName>
            </value>
            <value>
                <fullName>Development_Permit</fullName>
            </value>
            <value>
                <fullName>Liquor Licence Referrals</fullName>
            </value>
            <value>
                <fullName>Cannabis Retail Licence</fullName>
            </value>
            <value>
                <fullName>Development_Variance_Permit</fullName>
            </value>
            <value>
                <fullName>Covenant_Amendment/Discharge</fullName>
            </value>
            <value>
                <fullName>Temporary_Use_Permit</fullName>
            </value>
            <value>
                <fullName>Flood_Management_Bylaw_Exemption</fullName>
            </value>
            <value>
                <fullName>Minimum_Frontage_Exception</fullName>
            </value>
            <value>
                <fullName>Phased_Development_Agreement</fullName>
            </value>
            <value>
                <fullName>Board_of_Variance</fullName>
            </value>
            <value>
                <fullName>Strata_Conversion</fullName>
            </value>
            <value>
                <fullName>Agricultural_Land_Reserve</fullName>
            </value>
            <value>
                <fullName>Subdivision_Referral</fullName>
            </value>
            <value>
                <fullName>Crown_Land_Referrals</fullName>
            </value>
            <value>
                <fullName>Telecommunication_Antenna_Structure</fullName>
            </value>
            <value>
                <fullName>Agricultural Land Reserve</fullName>
                <isActive>false</isActive>
                <label>Agricultural Land Reserve</label>
            </value>
            <value>
                <fullName>Board of Variance</fullName>
                <isActive>false</isActive>
                <label>Board of Variance</label>
            </value>
            <value>
                <fullName>Covenant Amendment/Discharge</fullName>
                <isActive>false</isActive>
                <label>Covenant Amendment/Discharge</label>
            </value>
            <value>
                <fullName>Crown Land Referrals</fullName>
                <isActive>false</isActive>
                <label>Crown Land Referrals</label>
            </value>
            <value>
                <fullName>Development Variance Permit</fullName>
                <isActive>false</isActive>
                <label>Development Variance Permit</label>
            </value>
            <value>
                <fullName>Flood Management Bylaw Exemption</fullName>
                <isActive>false</isActive>
                <label>Flood Management Bylaw Exemption</label>
            </value>
            <value>
                <fullName>Minimum Frontage Exception</fullName>
                <isActive>false</isActive>
                <label>Minimum Frontage Exception</label>
            </value>
            <value>
                <fullName>OCP, Zoning or Land Use Bylaw Amendment</fullName>
                <isActive>false</isActive>
                <label>OCP, Zoning or Land Use Bylaw Amendment</label>
            </value>
            <value>
                <fullName>Phased Development Agreement</fullName>
                <isActive>false</isActive>
                <label>Phased Development Agreement</label>
            </value>
            <value>
                <fullName>Strata Conversion</fullName>
                <isActive>false</isActive>
                <label>Strata Conversion</label>
            </value>
            <value>
                <fullName>Subdivision (Referral)</fullName>
                <isActive>false</isActive>
                <label>Subdivision (Referral)</label>
            </value>
            <value>
                <fullName>Telecommunication Antenna Structure</fullName>
                <isActive>false</isActive>
                <label>Telecommunication Antenna Structure</label>
            </value>
            <value>
                <fullName>Temporary Use Permit</fullName>
                <isActive>false</isActive>
                <label>Temporary Use Permit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>