force-app/main/default/objects/CVRD_DS_Proceeding_OutcomeMapping__mdt/fields/CVRD_DS_ProceedingType__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_ProceedingType__c</fullName>
    <label>ProceedingType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Hearing</fullName>
            </value>
            <value>
                <fullName>Public Information Meeting</fullName>
            </value>
            <value>
                <fullName>Advisory Planning Commission</fullName>
            </value>
            <value>
                <fullName>Community Parks Advisory Commission</fullName>
            </value>
            <value>
                <fullName>Board of Variance</fullName>
            </value>
            <value>
                <fullName>Board Meeting</fullName>
            </value>
            <value>
                <fullName>EASC Meeting</fullName>
            </value>
            <value>
                <fullName>Special EASC Meeting</fullName>
            </value>
            <value>
                <fullName>Board Approval</fullName>
                <isActive>false</isActive>
                <label>Board Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>